♻ refactor: Slice를 List로 변경
1. Slice를 List로 변경