@@ -14,8 +14,6 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Slice;
-import org.springframework.data.domain.SliceImpl;
 
 import java.util.Collections;
 import java.util.List;
@@ -23,6 +21,7 @@ import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.verify;
 
 @ExtendWith(MockitoExtension.class)
 class RecommendationServiceTest {
@@ -42,6 +41,10 @@ class RecommendationServiceTest {
     @InjectMocks
     private RecommendationService recommendationService;
 
+    private SongRecommendationResponseDto createDummyDto(Long songId) {
+        return new SongRecommendationResponseDto(songId, "song-" + songId, 100L, "artist", 200L, "album", "album.jpg", 50L);
+    }
+
     @Test
     @DisplayName("추천 조회 성공 - Seed가 없으면 Cold Start 추천을 반환")
     void success_getRecommendedSongSlice_coldStart() {
@@ -53,16 +56,21 @@ class RecommendationServiceTest {
         given(songLikeRepository.findSongsLikedByUser(authUser.getUserId())).willReturn(Collections.emptyList());
         given(playlistSongRepository.findSongsPlaylistByUser(authUser.getUserId())).willReturn(Collections.emptyList());
 
-        // cold-start 추천 결과를 미리 정의
-        Slice<SongRecommendationResponseDto> expected = new SliceImpl<>(Collections.emptyList(), pageable, false);
-        given(songRepository.findRecommendedSongSliceForColdStart(pageable)).willReturn(expected);
+        // cold-start 추천 결과
+        SongRecommendationResponseDto dto = createDummyDto(1L);
+        List<SongRecommendationResponseDto> list = List.of(dto);
+        given(songRepository.findRecommendedSongSliceForColdStart(pageable)).willReturn(list);
 
-        // when 추천 서비스 호출
-        Slice<SongRecommendationResponseDto> result = recommendationService.getRecommendedSongSlice(authUser, pageable);
+        // when
+        List<SongRecommendationResponseDto> result = recommendationService.getRecommendedSongSlice(authUser, pageable);
 
-        // then cold-start 추천이 정상적으로 반환
-        assertNotNull(result);
+        // then
+        assertEquals(1, result.size());
+        assertEquals(1L, result.get(0).getSongId());
+
+        verify(songRepository).findRecommendedSongSliceForColdStart(pageable);
     }
+
 
     @Test
     @DisplayName("추천 조회 성공 - Seed가 있으면 추천 로직을 수행")
@@ -92,15 +100,21 @@ class RecommendationServiceTest {
         given(featureVectorizer.vectorizeSongMap(recommendFeature)).willReturn(Map.of("g:pop", 1.0));
 
         // 최종 추천 결과
-        Slice<SongRecommendationResponseDto> expected = new SliceImpl<>(Collections.emptyList(), pageable, false);
-        given(songRepository.findRecommendedSongSlice(List.of(2L), pageable)).willReturn(expected);
+        SongRecommendationResponseDto dto = createDummyDto(2L);
+        List<SongRecommendationResponseDto> list = List.of(dto);
+        given(songRepository.findRecommendedSongSlice(List.of(2L), pageable)).willReturn(list);
 
         // when
-        Slice<SongRecommendationResponseDto> result = recommendationService.getRecommendedSongSlice(authUser, pageable);
+        List<SongRecommendationResponseDto> result = recommendationService.getRecommendedSongSlice(authUser, pageable);
 
-        // then 추천 로직이 정상 종료
-        assertNotNull(result);
+        // then
+        assertEquals(1, result.size());
+        assertEquals(2L, result.get(0).getSongId());
+
+        verify(songRepository).findSeedGenreList(List.of(1L));
+        verify(songRepository).findRecommendedSongSlice(List.of(2L), pageable);
     }
+
 
     @Test
     @DisplayName("실패 - 추천 후보가 없으면 빈 추천 결과를 반환")
@@ -110,6 +124,7 @@ class RecommendationServiceTest {
         Pageable pageable = Pageable.ofSize(10);
 
         given(songLikeRepository.findSongsLikedByUser(authUser.getUserId())).willReturn(List.of(1L));
+
         given(playlistSongRepository.findSongsPlaylistByUser(authUser.getUserId())).willReturn(Collections.emptyList());
 
         // 장르 ID
@@ -117,7 +132,6 @@ class RecommendationServiceTest {
 
         // Seed Genre 조회 mock
         given(songRepository.findSeedGenreList(List.of(1L))).willReturn(genreIdList);
-
         SongFeatureDto seedFeature = new SongFeatureDto(1L, List.of("Pop"), "high", null, null);
         given(songRepository.findFeatureBySongIdMap(List.of(1L))).willReturn(Map.of(1L, seedFeature));
         given(featureVectorizer.vectorizeUserMap(List.of(seedFeature))).willReturn(Map.of("g:pop", 1.0));
@@ -125,13 +139,11 @@ class RecommendationServiceTest {
         // 추천 후보가 없는 상황
         given(songRepository.findRecommendFeatureMap(List.of(1L), genreIdList)).willReturn(Collections.emptyMap());
 
-        Slice<SongRecommendationResponseDto> expected = new SliceImpl<>(Collections.emptyList(), pageable, false);
-        given(songRepository.findRecommendedSongSlice(Collections.emptyList(), pageable)).willReturn(expected);
-
         // when
-        Slice<SongRecommendationResponseDto> result = recommendationService.getRecommendedSongSlice(authUser, pageable);
+        List<SongRecommendationResponseDto> result = recommendationService.getRecommendedSongSlice(authUser, pageable);
 
-        // then 에러 없이 빈 결과 반환
-        assertNotNull(result);
+        // then
+        assertTrue(result.isEmpty());
+        verify(songRepository).findRecommendFeatureMap(List.of(1L), genreIdList);
     }
 }
